# CompositeAndVisitorDemo

./: CMakeLists.txt  README.md  class_diargram.puml  components.txt  components.xml  main.cpp
lib/: AbstractComponent.h  AbstractExporter.h
lib/components/: PictureComponent.h  TextComponent.h
lib/exporters/: ExporterToTxt.h  ExporterToXml.h
